<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etCommerceName"
        android:hint="@string/commerce_name"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etDepartment"
        android:hint="@string/department"
        app:layout_constraintTop_toBottomOf="@+id/etCommerceName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etDocument"
        android:hint="@string/document_number"
        app:layout_constraintTop_toBottomOf="@+id/etDepartment"/>

    <Button
        android:id="@+id/btnImageSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_image"
        app:layout_constraintTop_toBottomOf="@+id/etDocument"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnImageSelector"
        tools:srcCompat="@tools:sample/date/ddmmyy" />/>

    <Button
        android:id="@+id/btnAffiliateCommerce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/affiliate_commerce"
        app:layout_constraintTop_toBottomOf="@+id/imageView"/>


</androidx.constraintlayout.widget.ConstraintLayout>